fixed overlaps

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,14 +1,10 @@
 .projects__list {
   margin-top: 100px;
   margin-bottom: 100px;
-  margin-left: 50px;
-  margin-right: 50px;
-  padding-left: 50px;
-  padding-right: 50px;
+  width: 100%;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  grid-gap: 16px;
-  padding: 16px;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 2vh;
   flex-grow: 1;
 }
 
@@ -76,23 +72,20 @@
   background-color: transparent;
 }
 
-@media (max-width: 960px) {
-  /* For a screen < 960px, this CSS will be read */
-  .cameras__list {
-    grid-template-columns: 1fr 1fr 1fr;
+@media (max-width: 1060px) {
+  /* For a screen < 1060px, this CSS will be read */
+  .projects__list {
+    grid-template-columns: 1fr 1fr;
   }
 }
 
 @media (max-width: 720px) {
   /* For a screen < 720px, this CSS will be read */
-  .cameras__list {
-    grid-template-columns: 1fr 1fr;
+  .projects__list {
+    grid-template-columns: 1fr;
   }
 }
 
 @media (max-width: 540px) {
   /* For a screen < 540px, this CSS will be read */
-  .cameras__list {
-    grid-template-columns: 1fr;
-  }
 }
